...
              ),
            ),
          ),
          Align(
            alignment: Alignment.bottomRight,
            child: GestureDetector(
              key: const Key('apply_button'),
              onTap: (context.watch<SelectionModel>().shops.isEmpty ||
                      context.watch<SelectionModel>().brands.isEmpty)
                  ? null
                  : () {
                      if (isShops) {
                        context.read<Settings>().shops =
...
  final bool isShops;
  const SelectAll(this.isShops, {Key? key}) : super(key: key);

  @override
  Widget build(BuildContext context) {
    return GestureDetector(
      key: const Key('select_all_button'),
      onTap: () {
        final value = isShops
            ? context.read<SelectionModel>().shops.length ==
                context.read<Aggregation>().allShops.length
            : context.read<SelectionModel>().brands.length ==
                context.read<Aggregation>().allBrands.length;
...
