...
          ),
          Container(
            height: 50,
            width: 110,
            color: const Color(0xFFB2C2D7),
            child: TextButton(
              key: const Key('cancel_button'),
              onPressed: () {
                final aggregation = context.read<Aggregation>();
                context.read<Settings>().reset(
                      aggregation.allShops.toList(),
                      aggregation.allBrands.toList(),
                      SortingParameter.discount,
...
