...
  @override
  Widget build(BuildContext context) {
    return Column(
      children: [
        Flexible(
          child: GestureDetector(
            key: const Key('sorting_parameter_price'),
            onTap: () => context.read<Settings>().sortingParameter =
                SortingParameter.price,
            child: ListTile(
              contentPadding: EdgeInsets.zero,
              title: const Text(
                'цена',
...
